# Interview_Practice_Materials

./: README.md
6.102/ic01-static-checking/: cumulative-avg.py
6.102/ic02-testing/src/: powerMod.ts
6.102/ic05-designing-specs/src/: specs.ts
6.102/ic06-adts/src/: sudoku.ts
6.102/ic07-af-ri/test/: sudokuTest.ts
6.102/ic08-interfaces-subtyping/src/: Bag.ts  BasicBag.ts  FlipBag.ts
6.102/ic08-interfaces-subtyping/test/: BagTest.ts
6.102/ic10-equality/src/: Stroke.ts
6.102/ic10-equality/test/: equalsTest.ts
6.102/ic11-recursive/src/: Bracket.ts
6.102/ic11-recursive/test/: BracketTest.ts
6.102/ic12-intexpr/: package.json
6.102/ic12-intexpr/test/: grammarTest.ts  warmupTest.ts
Java/interview_preparation/: pom.xml
Javascript/: package-lock.json  package.json
Javascript/src/: mutation.ts  two_sum.js
Javascript/src/6.102/ic01-static-checking/: 1.ts  cumulative-avg.js  cumulative-avg.py  cumulative-avg.ts  package.json
Javascript/src/6.102/ic04-specs/: package.json
Javascript/src/6.102/ic06-adts/: tsconfig.json
Javascript/src/older/: main.js  memoization.js  memoized_fib.js
Machine_Learning/: .gitignore
interview_python/: pyproject.toml
python_materials/: pyproject.toml
python_materials/src/Algorithms/: Arrays.py  EditDistance.py  SlidingWindow.py
python_materials/src/Algorithms/dynamicProgramming/: LongestIncreasingSubsequence.py
python_materials/src/leetcode/: 14_longest_common_prefix.py  22_generate_parenthesis.py  983_min_cost_tickets.py  count_subarrays.py  easy.ipynb  longest_consecutive.py
(+26 files in other folders)
