[tool.poetry]
name = "interview-practice"
version = "0.1.0"
description = ""
authors = ["Deven"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
black = {extras = ["jupyter"], version = "^24.10.0"}
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
